crates/normalize/tests/snapshots/cli_snapshots__help_analyze_duplicate_types.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"duplicate-types\"])"
---
Detect duplicate type definitions

Usage: normalize analyze duplicate-types [OPTIONS] [target]

Arguments:
  [target]  Target directory to scan

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --min-overlap <min-overlap>  Minimum field overlap percentage
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize analyze duplicate-types  # find structurally similar type definitions
