crates/normalize/tests/snapshots/cli_snapshots__help_analyze_files.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"files\"])"
---
Show longest files in codebase

Usage: normalize analyze files [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -l, --limit <limit>              Number of files to show
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
