crates/normalize/tests/snapshots/cli_snapshots__help_analyze_health.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"health\"])"
---
Run health analysis (file counts, complexity stats, large file warnings)

Usage: normalize analyze health [OPTIONS] [target]

Arguments:
  [target]  Target file or directory

Options:
      --pretty                     Human-friendly output with colors and formatting
  -r, --root <root>                Root directory (defaults to current directory)
      --compact                    Compact output without colors (overrides TTY detection)
      --exclude <exclude>          Exclude paths matching pattern
      --jsonl                      Output one JSON object per line (for arrays)
      --only <only>                Include only paths matching pattern
      --json                       Output machine-readable JSON
  -l, --limit <limit>              Maximum number of large files to include in output (0 = no limit, default 10)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
