crates/normalize/tests/snapshots/cli_snapshots__help_analyze_length.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"length\"])"
---
Assess codebase quality. Use for health checks, finding duplicates, security scanning, and architecture analysis.

Usage: normalize analyze [OPTIONS] [target]

Arguments:
  [target]  Target file or directory

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --only <only>                Include only paths matching pattern
  -l, --limit <limit>              Maximum number of large files to include in output (0 = no limit, default 10)
  -h, --help                       Print help
  -V, --version                    Print version

Commands:
  health             Run health analysis (file counts, complexity stats, large file warnings)
  all                Run all analysis passes
  summary            Auto-generated single-page codebase overview
  liveness           Compute live-in and live-out variable sets for each basic block in a function.
  effects            Show all side-effecting constructs (await, defer, yield, resource acquire/release,
channel send/receive) for functions in a source file.
  exceptions         Show type-refined exception flow for functions in a source file.

Repository:
  docs               Measure documentation coverage: which public symbols lack doc comments.

Graph analysis:
  architecture       Analyze architectural structure: coupling, dependency cycles, and hub modules.

Git history:
  coupling-clusters  Find clusters of files that change together in git history (connected components).
  activity           Show commit activity across multiple repositories over time windows.
  repo-coupling      Detect temporal coupling between repositories: pairs that receive commits together.
  cross-repo-health  Rank repositories by composite tech-debt score (churn × complexity × coupling).

Security:
  security           Scan the codebase for security issues (hardcoded secrets, unsafe patterns).

Diff:
  skeleton-diff      Show structural (skeleton) changes between a base ref and HEAD.
