crates/normalize/tests/snapshots/cli_snapshots__help_analyze_ownership.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"ownership\"])"
---
Show per-file ownership concentration from git blame

Usage: normalize analyze ownership [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -l, --limit <limit>              Maximum number of files to show (0=no limit)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --repos-dir <repos-dir>      Run across all git repos under DIR
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --repos-depth <repos-depth>  Max depth to search for repos (default: 1)
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize analyze ownership  # show ownership concentration per file
