crates/normalize/tests/snapshots/cli_snapshots__help_analyze_repo_coupling.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"repo-coupling\"])"
---
Detect temporal coupling between repositories: pairs that receive commits together.

Usage: normalize analyze repo-coupling [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
      --repos-dir <repos-dir>      Directory containing git repos
      --compact                    Compact output without colors (overrides TTY detection)
      --window <window>            Window size in hours for temporal grouping
      --jsonl                      Output one JSON object per line (for arrays)
      --min-windows <min-windows>  Minimum shared windows to report a temporal pair
      --json                       Output machine-readable JSON
      --repos-depth <repos-depth>  Max depth to search for repos (default: 1)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Groups commits within `window` hours as "co-changes" and reports repo pairs that
appear together in at least `min_windows` co-change windows. Returns a
`RepoCouplingReport` with ranked repo pairs and their co-change counts.

Transitional shim: moved to the top-level `history` verb (`history repo-coupling`,
owned by `normalize-git-history`). Hidden from help; kept for one release.
