crates/normalize/tests/snapshots/cli_snapshots__help_analyze_security.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"security\"])"
---
Scan the codebase for security issues (hardcoded secrets, unsafe patterns).

Usage: normalize analyze security [OPTIONS] [target]

Arguments:
  [target]  Target file or directory to filter results by

Options:
      --pretty                     Human-friendly output with colors and formatting
  -r, --root <root>                Root directory (defaults to current directory)
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Also known as: secrets detection, credential scanning, hardcoded password finder,
API key leaks, vulnerability scanning, unsafe code audit.

Runs heuristic pattern matching across all indexed files. The optional `target`
parameter filters findings to paths that contain the given substring. Returns a
`SecurityReport` with ranked findings including file, line, and severity.
